# crypto-signal-bot

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
config/: entry.yaml  notifications.yaml  research.yaml  risk.yaml  runtime.yaml  setup.yaml
deploy/: README.md  install.sh  tradingbot.service
src/bot/: __init__.py  __main__.py  backtest.py  config.py  entry_identity.py  entry_stats.py  export_pine.py  history_backtest.py  history_replay.py  prepare_stats.py  scheduler.py  trade_stats.py  trading.py
src/bot/analyzer/: __init__.py  continuation.py  entry_advanced.py  entry_ltf.py  fib_dca.py  filters.py  improvements.py  reentry.py  reversal.py  setup_lifecycle.py  setup_machine.py  setup_runtime.py  strategy_gates.py  structure_state.py
src/bot/entry_engine/: __init__.py  structural.py
src/bot/exchange/: bybit_client.py
src/bot/market/: __init__.py  candles.py  fibo.py  pivots.py
src/bot/notify/: telegram.py
tests/: test_backtest.py  test_bybit_client.py  test_config.py  test_continuation_gate.py  test_entry_advanced.py  test_entry_filters.py  test_entry_ltf.py  test_entry_stats.py  test_entry_strategy.py  test_export_pine.py  test_fib_dca.py  test_fib_dca_runtime.py  test_fibo.py  test_history_replay.py  test_impulse_lock.py  test_pivots.py  test_prepare_stats.py  test_reentry.py  test_reversal.py  test_setup_lifecycle.py  test_setup_machine.py  test_setup_runtime.py  test_storage_repo.py  test_strategy_gates.py  test_structure_state.py  test_telegram_notify.py  test_trade_stats.py  test_trading.py
(+6 files in other folders)
